# clean-euler-project

./: .gitmodules  CMakeLists.txt  NextProblem.py  README.md
src/euler_project/: CMakeLists.txt  EulerProject.cpp  EulerProject.h
src/euler_project_run/: CMakeLists.txt  EulerProjectRun.cpp
tests/euler_project_test/: CMakeLists.txt  euler_project_tests.cpp
